# Appmover

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/di/: container.rs  mod.rs
src-tauri/src/application/effect/: mod.rs  store.rs
src-tauri/src/application/intent/: intent.rs  mod.rs
src-tauri/src/application/reducer/: mod.rs  reducer.rs
src-tauri/src/application/state/: app_state.rs  mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/entities/: drive_info.rs  installed_app.rs  migration_plan.rs  migration_report.rs  migration_status.rs  mod.rs
src-tauri/src/domain/repositories/: app_repository.rs  drive_repository.rs  filesystem_probe.rs  migration_repository.rs  mod.rs  path_guard.rs  process_guard.rs  size_calculator.rs  state_store.rs
src-tauri/src/domain/usecases/: calculate_size.rs  check_migration_preconditions.rs  detect_orphans.rs  list_drives.rs  list_migrated_apps.rs  migrate_app.rs  mod.rs  rollback_app.rs  scan_apps.rs
src-tauri/src/domain/value_objects/: app_id.rs  app_path.rs  byte_size.rs  drive_letter.rs  mod.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/platform/: mod.rs
src-tauri/src/infrastructure/platform/mock/: junction.rs  mod.rs  process.rs  registry.rs
src-tauri/src/infrastructure/repositories/: drive_repository.rs  migration_repository.rs  mod.rs  size_calculator.rs  state_store.rs
src-tauri/src/infrastructure/services/: acl_preserver.rs  copy_engine.rs  junction_service.rs  mod.rs
src-tauri/src/presentation/: mod.rs
src-tauri/src/presentation/commands/: handlers.rs  mod.rs
src-tauri/src/presentation/events/: mod.rs  protocol.rs
src-tauri/src/shared/: error.rs  logger.rs  mod.rs  result.rs
src-tauri/tests/: full_cycle.rs  use_cases.rs
(+13 files in other folders)
