[package]
name = "appmover"
version = "0.1.0"
description = "Windows software migration tool with directory junction support"
authors = ["AppMover Team"]
edition = "2021"
rust-version = "1.75"
license = "MIT"

[lib]
name = "appmover_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "appmover"
path = "src/main.rs"

[[bin]]
name = "appmover-cli"
path = "src/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Windows 专属依赖,仅在 Windows 目标编译时引入
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_UI_Shell",
] }
winreg = "0.52"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "macros", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# 并行遍历
rayon = "1.10"
walkdir = "2"

# 错误处理
anyhow = "1"
thiserror = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 序列化 / ID / 时间
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

# 并发原语
parking_lot = "0.12"
once_cell = "1"
crossbeam-channel = "0.5"

# 跨平台工具
dirs = "5"
sysinfo = "0.31"
humansize = "2"

# DI / 异步 trait
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
mockall = "0.13"
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level = "z"     # 体积优先
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
